update swagger again to fix missing parameters
